// Bun Snapshot v1, https://bun.sh/docs/test/snapshots
// W31: 11 complete bodies reviewed in W31e-bun-alignment.json.

exports[`Radio should Radio snapshot 1`] = `
"<div>
  <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
    <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
    <span class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
    </span>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 2`] = `
"<div>
  <label class="OHap5djyt4pz8v8ipo    ">
    <input data-radio-input="true" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
    <div data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp ">
    </div>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 3`] = `
"<div>
  <label aria-disabled="true" class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
    <input data-radio-input="true" disabled="" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
    <span aria-disabled="true" class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
    </span>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 4`] = `
"<div>
  <label aria-disabled="true" class="OHap5djyt4pz8v8ipo    ">
    <input data-radio-input="true" disabled="" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
    <div aria-disabled="true" data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp ">
    </div>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 5`] = `
"<div>
  <label aria-disabled="true" class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
    <input data-radio-input="true" disabled="" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
    <span aria-disabled="true" class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt" style="width: 500px;">
    </span>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 6`] = `
"<div>
  <label aria-disabled="true" class="OHap5djyt4pz8v8ipo    ">
    <input data-radio-input="true" disabled="" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
    <div aria-disabled="true" data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp " style="width: 500px;">
    </div>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 7`] = `
"<div>
  <label aria-disabled="true" class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
    <input data-radio-input="true" disabled="" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
    <span aria-disabled="true" class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt" style="width: 500px;">
    </span>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 8`] = `
"<div>
  <label aria-disabled="true" class="OHap5djyt4pz8v8ipo    ">
    <input data-radio-input="true" disabled="" class="className OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
    <div aria-disabled="true" data-radio-button="true" class="className OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp ">
    </div>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 9`] = `
"<div>
  <label aria-disabled="true" class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
    <input data-radio-input="true" disabled="" class="className OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
    <span aria-disabled="true" class="classNameLabel OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
    </span>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 10`] = `
"<div>
  <label class="OHap5djyt4pz8v8ipo    ">
    <input data-radio-input="true" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
    <div data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp OHa2v65b8fmsywl7o3">
    </div>
  </label>
</div>"
`;

exports[`Radio should Radio snapshot 11`] = `
"<div>
  <label class="OHap5djyt4pz8v8ipo    ">
    <input data-radio-input="true" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
    <div data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp OHaz8c7_b8sr2o_nmo">
    </div>
  </label>
</div>"
`;
